# osvm-cli

./: .claude_rules  .cline_rules  .clinerules  .cursorrules  .dockerignore  .dockerignore.offline  .gitattributes  .gitignore  ADDITIONAL_BUGS_FOUND.md  AGENTS.md  AI_SETTINGS_MIGRATION_COMPLETE.md  ALIGNMENT_FIX_SUCCESS.md  ALL_BUGS_FIXED_SUMMARY.md  AUDIT_INDEX.md  AUDIT_REPORT.md  AUDIT_RESULTS_SUMMARY.txt  AUDIT_SUMMARY_VISUAL.md  Architecture.md  BINARY_COMPARISON_ANALYSIS.md  BREAKTHROUGH_30_PERCENT_ACHIEVED.md  BUG_FIXES_COMPLETED.md  BUG_FIXES_IN_PROGRESS.md  BUG_FIXES_PRIORITY.md  BUG_FIX_COMPLETION_SUMMARY.md  BUG_REVIEW_REPORT.md  CHANGELOG.md  CHAT2_COMPLETE_UX_OVERHAUL.md  CHAT2_TEST_REPORT.md  CHAT2_ULTIMATE_UX_TRANSFORMATION.md  CHAT2_UX_IMPROVEMENTS.md  CHAT_AI_FIX.md  CHAT_ENVIRONMENT_VARS_REMOVED.md  CHAT_INTEGRATION_PLAN.md  CHAT_QUICKSTART.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_BUGS.md  COMMAND_PALETTE_FEATURES.md  (+210 more)
.aea/: README.md  aea-rules.md  agent-config.yaml
.cargo/: audit.toml  config.toml
.claude/: architecture.md  generate-status.sh  rules.md
.devcontainer/: devcontainer.json
.github/: PUBLISHING_GUIDE.md  READMEci.md  copilot-instructions.md
.github-proposal/: README.md
audit_reports/: osvm_audit_report_20250626_202931.typ  osvm_audit_report_20250801_204051.typ  osvm_audit_report_20250801_204107.typ  osvm_audit_report_20250801_204247.json  osvm_audit_report_20250801_233249.html  osvm_audit_report_20250801_233337.html  osvm_audit_report_20250921_161935.typ
benches/: deployment_benchmarks.rs  performance_benchmarks.rs
completions/: README.md  osvm.bash  osvm.zsh
crates/osvm-web/: CLAUDE.md  Cargo.toml  index.html
crates/osvm-web/src/: graph.rs  lib.rs
crates/ovsm/: BUG_REPORT_NESTED_CONTROL_FLOW.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SUMMARY.md  Cargo.toml  FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  QA_RUNNER_SELF_ASSESSMENT.md  QUICK_START.md  README.md  SBPF_COMPILER_BUILTINS.md  SELF_ASSESSMENT_REPORT.md  THIRD_ASSESSMENT.md  USAGE_GUIDE.md
crates/ovsm-lsp/: CLAUDE.md  Cargo.toml
crates/ovsm-lsp/src/: ai_completion.rs  backend.rs  blockchain_rpc.rs  blockchain_types.rs  diagnostics.rs  documentation.rs  investigation_templates.rs  knowledge_transfer.rs  lib.rs  main.rs  repl.rs  semantic_tokens.rs  symbols.rs  telemetry.rs
crates/ovsm/agent_queries/: query_validator.py
crates/ovsm/benches/: async_bench.rs
crates/ovsm/docs/archive/: BUG_COMPARISON_ALWAYS_TRUE.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_STATUS.md  QA_TEST_STATUS.md  TEST_RESULTS_SUMMARY.md
crates/ovsm/examples/: README.md  array_operations.ovsm  async_basics.rs  async_data_processing.rs  compare_elf_bytes.rs  compare_elf_parsing.rs  compile_and_deploy.rs  complete_demo.rs  comprehensive_tools.rs  conditional_logic.ovsm  debug_elf_low_level.rs  debug_elf_parse.rs  debug_elf_parser.rs  debug_elf_rbpf_trace.rs  debug_elf_symbols.rs  debug_for.rs  debug_instruction_decode.rs  debug_logical.rs  debug_pt_dynamic.rs  debug_rbpf_counting.rs  debug_rbpf_search.rs  debug_relocation_offset.rs  debug_slice_failure.rs  factorial.ovsm  fibonacci.ovsm  gen_syscall_elf.rs  hello_world.ovsm  loop_control.ovsm  minimal_sbpf_elf.rs  minimal_syscall_elf.rs  qa_test_runner.rs  showcase_new_features.rs  simple_repl.rs  solana_v1_elf.rs  test_simple_comparison.md  tools_demo.rs  validate_elf.rs
crates/ovsm/src/: error.rs  lib.rs
crates/ovsm/src/compiler/: anchor_idl.rs  debug.rs  elf.rs  formal_verification.rs  graph_coloring.rs  ir.rs  mod.rs  optimizer.rs  regalloc_analyzer.rs  runtime.rs  sbpf_codegen.rs  solana_abi.rs  types.rs  verifier.rs
crates/ovsm/src/compiler/ir/: generator.rs  instruction.rs  memory_model.rs  mod.rs  program.rs  types.rs
crates/ovsm/src/decompiler/: cfg.rs  disassembler.rs  idl.rs  mod.rs  ovsm_emitter.rs
crates/ovsm/src/lexer/: mod.rs  scanner.rs  sexpr_scanner.rs  token.rs
crates/ovsm/src/parser/: ast.rs  mod.rs  paren_fixer.rs  sexpr_parser.rs
crates/ovsm/src/runtime/: environment.rs  evaluator.rs  lisp_evaluator.rs  mod.rs  streaming.rs  value.rs
crates/ovsm/src/tools/: browser.rs  mod.rs
crates/ovsm/src/tools/stdlib/: advanced_math.rs  arrays.rs  bit_operations.rs  clos_advanced.rs  clos_basic.rs  compiler_eval.rs  conditions.rs  control_flow_extended.rs  data_processing.rs  documentation.rs  environment.rs  format.rs  hash_tables.rs  introspection.rs  io_basic.rs  io_extended.rs  lists_advanced.rs  llm.rs  loop_advanced.rs  loop_full.rs  loop_utilities.rs  math.rs  method_combinations.rs  mod.rs  multiple_values.rs  network.rs  numeric.rs  objects.rs  packages.rs  parsing.rs  pathnames.rs  printer_control.rs  random_extended.rs  reader_control.rs  reader_printer.rs  sequences.rs  sequences_advanced.rs  statistics.rs  streams.rs  strings.rs  (+6 more)
crates/ovsm/src/types/: bidirectional.rs  bridge.rs  checker.rs  mod.rs  refinement.rs  verify.rs
crates/ovsm/tests/: agent_accountability_tests.rs  catch_throw_tests.rs  common_lisp_functions_tests.rs  error_handling_tests.rs  integration_v1_1_0.rs  let_star_tests.rs  lisp_comprehensive_tests.rs  lisp_e2e_tests.rs  macro_tests.rs  mcp_advanced_scenarios.rs  mcp_integration_tests.rs  proptest_fuzz_tests.rs  test_break_bug.rs  test_comparisons.rs  varargs_tests.rs  verify_no_silent_failures.rs
docs/: 100_PERCENT_COMPLETE.md  AEA_PROTOCOL.md  AGENT_MARKETPLACE_PROTOCOL.md  ARCHITECTURE_FIXES_2025.md  BUGS_FIXED.md  CNAME  DESIGN_IMPROVEMENT_ANALYSIS.md  ENHANCEMENTS.md  INTELLIGENT_AUDIT_SELF_ASSESSMENT.md  INTELLIGENT_AUDIT_SYSTEM.md  MOBILE_BUGS_FOUND.md  (+55 more)
examples/simple_mcp_server/: Cargo.toml  README.md
examples/simple_mcp_server/src/: main.rs
guest/mcp_vsock_wrapper/: Cargo.toml
guest/mcp_vsock_wrapper/.cargo/: config.toml
guest/mcp_vsock_wrapper/src/: main.rs
guest/unikraft_tool_executor/: Cargo.toml
guest/unikraft_tool_executor/src/: main.rs  protocol.rs  proxy.rs  types.rs
programs/agent-escrow/: Cargo.toml
programs/agent-escrow/src/: lib.rs
programs/bbs-registry/: Cargo.toml
programs/bbs-registry/src/: lib.rs
(+4277 files in other folders)
