[package]
name = "osvm"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "OpenSVM CLI tool for managing SVM nodes and deployments"
homepage = "https://github.com/openSVM/osvm-cli"
repository = "https://github.com/openSVM/osvm-cli"
readme = "README.md"
keywords = ["solana", "svm", "blockchain", "validator", "deployment"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
bincode = "2.0.1"
borsh = "1.5.7"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
solana-clap-utils = "3.0.1"
solana-cli-config = "3.0.1"
solana-client = "3.0.1"
solana-logger = "3.0.0"
solana-remote-wallet = { version = "3.0.1", optional = true }
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
tabular = "0.2.0"
prettytable-rs = "0.10.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-logger = "0.17.3"
anyhow = "1.0.99"
futures = "0.3.31"
rand = "0.9.2"
colored = "3.0.0"
url = "2.5.7"
serde_json = "1.0.143"
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
md5 = "0.8.0"
regex = "1.11.2"
# Use latest reqwest version for consistency
reqwest = { version = "0.12.23", features = ["json"] }
base64 = "0.22.1"
bs58 = "0.5.1"
# Enhanced audit dependencies
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
tera = "1.20"
once_cell = "1.21"
askama = "0.14"
log = "0.4"
cargo_metadata = "0.22"
toml = "0.9"
solana-commitment-config = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-program = "3.0.0"
solana-system-interface = "2.0.0"
solana-loader-v3-interface = { version = "6.1.0", features = ["bincode"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.22.0"
serial_test = "3.2.0"
mockito = "1.7.0"
criterion = "0.7.0"

[features]
default = []
remote-wallet = ["solana-remote-wallet"]

[[bench]]
name = "deployment_benchmarks"
harness = false

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "3.2.0" }
crunchy = { path = "vendor/crunchy" }

# Custom scripts for development and deployment
[package.metadata.scripts]
install = "bash install-release.sh"
install-dev = "cargo build && sudo cp target/debug/osvm /usr/bin/osvm"
build-release = "cargo build --release"
test-install = "cargo build --release && ./target/release/osvm --version"
clean-install = "sudo rm -f /usr/bin/osvm /usr/bin/osvm.backup"
