[workspace]
members = [".", "crates/ovsm", "guest/mcp_vsock_wrapper"]
resolver = "2"

[package]
name = "osvm"
version = "0.9.6"
edition = "2021"
license = "MIT"
description = "OpenSVM CLI tool for managing SVM nodes and deployments"
homepage = "https://github.com/openSVM/osvm-cli"
repository = "https://github.com/openSVM/osvm-cli"
readme = "README.md"
keywords = ["solana", "svm", "blockchain", "validator", "deployment"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
ovsm = { path = "crates/ovsm" }
bincode = "2.0.1"
borsh = "1.5.7"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
solana-clap-utils = "3.0.1"
solana-cli-config = "3.0.1"
solana-client = "3.0.1"
solana-logger = "3.0.0"
solana-remote-wallet = { version = "3.0.1", optional = true }
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-vsock = "0.4"
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
vsock = "0.3"
thiserror = "2.0.16"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
shell-escape = "0.1"
tabular = "0.2.0"
prettytable-rs = "0.10.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-logger = "0.17.3"
cursive = "0.21.0"
cursive-multiplex = "0.7.0"
anyhow = "1.0.99"
fs2 = "0.4"  # File locking to prevent session recording race conditions
async-trait = "0.1.83"
futures = "0.3.31"
rand = "0.9.2"
colored = "3.0.0"
csv = "1.3"
url = "2.5.7"
serde_json = "1.0.143"
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
indicatif = "0.17"
num_cpus = "1.16"
rayon = "1.8"
rmp-serde = "1.1"
md5 = "0.8.0"
sha2 = "0.10"
arboard = "3.4"
clickhouse = "0.11"
urlencoding = "2.1"
hex = "0.4"
regex = "1.11.2"
which = "7.0.1"
# Use latest reqwest version for consistency
reqwest = { version = "0.12.23", features = ["json"] }
base64 = "0.22.1"
brotli = "7.0"  # Brotli decompression for MCP responses
bs58 = "0.5.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "snappy"] }
notify = "7.0"
# Enhanced audit dependencies
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
tera = "1.20"
once_cell = "1.21"
askama = "0.14"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
cargo_metadata = "0.22"
toml = "0.9"
nix = { version = "0.29", features = ["signal", "process"] }
# FrozenBBS integration dependencies
diesel = { version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
meshtastic = "0.1.7"
config = { version = "0.15.18", features = ["preserve_order"] }
validator = { version = "0.20", features = ["derive"] }
solana-commitment-config = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.0.0"
solana-system-interface = "2.0.0"
solana-loader-v3-interface = { version = "6.1.0", features = ["bincode"] }
# Terminal markdown rendering
termimad = "0.30"
# PNG screenshot generation for TUI testing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
# Terminal emulation for capturing alternate screen buffer
vt100 = "0.15"
tui-nodes = "0.9.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.22.0"
serial_test = "3.2.0"
mockito = "1.7.0"
criterion = "0.7.0"
proptest = "1.5.0"

[features]
default = []
remote-wallet = ["solana-remote-wallet"]
incomplete_tests = []  # Feature flag for incomplete/experimental test files

[[bin]]
name = "osvm-bootstrap"
path = "src/bin/osvm_bootstrap.rs"

[[bench]]
name = "deployment_benchmarks"
path = "benches/deployment_benchmarks.rs"

# Optimized release profile for smaller binary size
[profile.release]
opt-level = "s"          # Optimize for size (faster than "z", similar size)
lto = "thin"             # Thin LTO (faster compile, almost same size as fat)
codegen-units = 1        # Better optimization, slower compile
panic = "abort"          # Remove unwinding machinery
strip = true             # Automatically strip symbols
incremental = false      # Disable incremental for better optimization

# Still-fast debug builds
[profile.dev]
opt-level = 0
debug = true

[patch.crates-io]
crunchy = { path = "vendor/crunchy" }

# Custom scripts for development and deployment
[package.metadata.scripts]
install = "bash install-release.sh"
install-dev = "cargo build && sudo cp target/debug/osvm /usr/bin/osvm"
build-release = "cargo build --release"
test-install = "cargo build --release && ./target/release/osvm --version"
clean-install = "sudo rm -f /usr/bin/osvm /usr/bin/osvm.backup"
