[package]
name = "ovsm"
version = "1.0.4"
edition = "2021"
authors = ["OSVM Team <rin@opensvm.com>"]
description = "OVSM (Open Versatile Seeker Mind) language interpreter for blockchain automation and scripting"
license = "MIT"
repository = "https://github.com/opensvm/osvm-cli"
homepage = "https://github.com/opensvm/osvm-cli"
documentation = "https://docs.rs/ovsm"
readme = "README.md"
keywords = ["blockchain", "solana", "language", "interpreter", "scripting"]
categories = ["parser-implementations", "development-tools"]
include = [
    "src/**/*",
    "examples/**/*.rs",
    "examples/**/*.ovsm",
    "examples/README.md",
    "tests/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "USAGE_GUIDE.md",
    "HOW_TO_USE.md",
]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Solana (matching parent crate version)
solana-sdk = "3.0"
solana-client = "3.0"
solana-transaction-status = "3.0"

# Data structures
dashmap = "5.5"
lru = "0.12"

# Time
chrono = "0.4"

# UUID for agents
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography and encoding
sha2 = "0.10"
base64 = "0.22.1"
bs58 = "0.5.1"
hex = "0.4"
url = "2.5"
csv = "1.3"

# Regex for pattern matching
regex = "1.10"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
bolero = "0.10"
tokio-test = "0.4"

[[bench]]
name = "execution_bench"
harness = false

[features]
default = ["stdlib", "agents"]
stdlib = []
agents = []
