[package]
name = "mcp_vsock_wrapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp_vsock_wrapper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-vsock = "0.5"
anyhow = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
[workspace]
