[package]
name = "agent-escrow"
version = "0.1.0"
edition = "2021"
description = "Agent Escrow & Slashing program for BBS - stake for accountability"
license = "MIT"

# Standalone workspace (not part of parent osvm-cli workspace)
[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
borsh = "1.5"
solana-program = "2.0"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1.0", features = ["full"] }
