[package]
name = "bbs-registry"
version = "0.1.0"
edition = "2021"
description = "On-chain BBS node registry for federated peer discovery"
license = "MIT"

# Standalone workspace (not part of parent osvm-cli workspace)
[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0"
borsh = "1.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1.0", features = ["full"] }
